# Library_System

./: .gitignore  CMakeLists.txt  build_without_judger.bat
assets/vision/config/: demo_seats.json  poly_seats.json  poly_simple_seats.json  seats.json  test_seats.json  vision.yml
assets/vision/weights/: person01.onnx  yolov8n_640.onnx
include/seatui/: charts_helpers.hpp  event_bus.hpp  heatmap.hpp  models.hpp  net_types.hpp  seat_provider.hpp
include/seatui/admin/: admin_window.hpp
include/seatui/judger/: data_structures.hpp  seat_state_judger.hpp
include/seatui/launcher/: login_window.hpp  role_selector.hpp
include/seatui/student/: book_search.hpp  navigation_canvas.hpp  student_window.hpp
include/seatui/vision/: Config.h  Enums.h  FrameProcessor.h  Mog2.h  Nms.h  OrtYolo.h  Publish.h  SeatRoi.h  Snapshotter.h  Types.h  VisionA.h  VisionClient.h
include/seatui/widgets/: card_dialog.hpp
include/uitls/: seat_simulator.hpp
include/ws/: ws_hub.hpp
src/admin_app/: admin_window.cpp
src/db_core/: DataManager.h  DataTypes.h  DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseSchemas.h  SeatDatabase.cpp  SeatDatabase.h  TimeUtils.cpp  TimeUtils.h
src/judger_core/: seat_state_judger.cpp
src/launcher_app/: login_window.cpp  main.cpp  role_selector.cpp
src/student_app/: book_search.cpp  navigation_canvas.cpp  student_window.cpp
src/utils/: seat_simulator.hpp
src/vision_core/: Config.cpp  FrameProcessor.cpp  Mog2.cpp  Nms.cpp  OrtYolo.cpp  Publish.cpp  SeatRoi.cpp  Snapshotter.cpp  Types.cpp  VisionA.cpp  VisionClient.cpp
src/widgets/: card_dialog.cpp
src/ws_service/: ws_hub.cpp  ws_main.cpp
tools/: judger_cli.cpp
tools/vision_apps/: AnnotatePerson.cpp  AnnotateSeatStates.cpp  AnnotateTables.cpp  FrameExtract.cpp  TestPerf.cpp  a_demo.cpp
